--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>15パズル</h1>
-    <div id="game-container">
-        <div id="puzzle-board"></div>
+       <h1>15パズル</h1>
+    <img src="https://placekitten.com/300/200" alt="かわいい猫" style="display: block; margin: 0 auto; border-radius: 12px;">
+    <div id="puzzle-container"></div>
+    <p id="message"></p>
+    <button id="shuffle-button">シャッフル & スタート</button>
+    <script type="module" src="index.js"></script>
+</body>
+
         <div id="controls">
             <div id="stats">
                 <p>Moves: <span id="move-count">0</span></p>
