--- a/index.html
+++ b/index.html
@@ -1,19 +1,14 @@
-<html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>15パズル</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
 <body>
-       <h1>15パズル</h1>
-    <img src="https://placekitten.com/300/200" alt="かわいい猫" style="display: block; margin: 0 auto; border-radius: 12px;">
-    <div id="puzzle-container"></div>
-    <p id="message"></p>
-    <button id="shuffle-button">シャッフル & スタート</button>
-    <script type="module" src="index.js"></script>
-</body>
+    <h1>15パズル</h1>
 
+    
+    <div style="text-align: center; margin-bottom: 10px;">
+        <img src="cute_cat_illust_3737.png" alt="猫の写真" style="max-width: 300px; border-radius: 12px;">
+        
+    </div>
+
+    <div id="game-container">
+        <div id="puzzle-board"></div>
         <div id="controls">
             <div id="stats">
                 <p>Moves: <span id="move-count">0</span></p>
@@ -28,4 +23,3 @@
     </div>
     <script src="index.js"></script>
 </body>
-</html>
