--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>15パズル</h1>
-  <img src="cat.jpg" alt="かわいい猫" width="200">
+  <img src="cute_cat.png" alt="かわいい猫" width="200">
   <button id="shuffle-button">シャッフル & スタート</button>
 
   <div id="game-container">
